@@ -50,7 +50,7 @@ commands =
     mkdir -p {toxinidir}/parts/htmlcov
     py.test --cov=src src
     coverage html
-    coverage report -m --fail-under=96
+    coverage report -m --fail-under=95
 
 [coverage:run]
 branch = True
